// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simpleParse 1`] = `
Array [
  Array [
    Object {
      "end": 10,
      "line": 1,
      "start": 4,
      "text": "select",
      "type": "KEYWORD",
    },
    Object {
      "end": 17,
      "line": 1,
      "start": 13,
      "text": "from",
      "type": "KEYWORD",
    },
    Object {
      "end": 23,
      "line": 1,
      "start": 18,
      "text": "table",
      "type": "KEYWORD",
    },
    Object {
      "end": 29,
      "line": 1,
      "start": 24,
      "text": "where",
      "type": "KEYWORD",
    },
    Object {
      "end": 36,
      "line": 1,
      "start": 30,
      "text": "fielda",
      "type": "VARIABLE",
    },
    Object {
      "end": 40,
      "line": 1,
      "start": 39,
      "text": "5",
      "type": "NUMBER",
    },
  ],
  Array [
    Object {
      "end": 10,
      "line": 2,
      "start": 4,
      "text": "select",
      "type": "KEYWORD",
    },
    Object {
      "end": 17,
      "line": 2,
      "start": 13,
      "text": "from",
      "type": "KEYWORD",
    },
    Object {
      "end": 23,
      "line": 2,
      "start": 18,
      "text": "table",
      "type": "KEYWORD",
    },
    Object {
      "end": 29,
      "line": 2,
      "start": 24,
      "text": "where",
      "type": "KEYWORD",
    },
    Object {
      "end": 36,
      "line": 2,
      "start": 30,
      "text": "fieldb",
      "type": "VARIABLE",
    },
    Object {
      "bracketIndex": 13,
      "end": 40,
      "line": 2,
      "start": 39,
      "text": "(",
      "type": "BRACKET",
    },
    Object {
      "end": 46,
      "line": 2,
      "start": 40,
      "text": "select",
      "type": "KEYWORD",
    },
    Object {
      "end": 53,
      "line": 2,
      "start": 47,
      "text": "fielda",
      "type": "VARIABLE",
    },
    Object {
      "end": 58,
      "line": 2,
      "start": 54,
      "text": "from",
      "type": "KEYWORD",
    },
    Object {
      "end": 64,
      "line": 2,
      "start": 59,
      "text": "table",
      "type": "KEYWORD",
    },
    Object {
      "end": 70,
      "line": 2,
      "start": 65,
      "text": "where",
      "type": "KEYWORD",
    },
    Object {
      "end": 77,
      "line": 2,
      "start": 71,
      "text": "fieldb",
      "type": "VARIABLE",
    },
    Object {
      "end": 81,
      "line": 2,
      "start": 80,
      "text": "5",
      "type": "NUMBER",
    },
    Object {
      "end": 82,
      "line": 2,
      "start": 81,
      "text": ")",
      "type": "BRACKET",
    },
  ],
]
`;

exports[`simpleParse 2`] = `
Array [
  Array [
    Object {
      "end": 6,
      "line": 0,
      "start": 0,
      "text": "select",
      "type": "KEYWORD",
    },
    Object {
      "end": 13,
      "line": 0,
      "start": 9,
      "text": "from",
      "type": "KEYWORD",
    },
    Object {
      "end": 19,
      "line": 0,
      "start": 14,
      "text": "table",
      "type": "KEYWORD",
    },
    Object {
      "end": 25,
      "line": 0,
      "start": 20,
      "text": "where",
      "type": "KEYWORD",
    },
    Object {
      "end": 33,
      "line": 0,
      "start": 26,
      "text": "extract",
      "type": "KEYWORD",
    },
    Object {
      "bracketIndex": 9,
      "end": 34,
      "line": 0,
      "start": 33,
      "text": "(",
      "type": "BRACKET",
    },
    Object {
      "end": 38,
      "line": 0,
      "start": 34,
      "text": "YEAR",
      "type": "VARIABLE",
    },
    Object {
      "end": 43,
      "line": 0,
      "start": 39,
      "text": "from",
      "type": "KEYWORD",
    },
    Object {
      "end": 50,
      "line": 0,
      "start": 44,
      "text": "fielda",
      "type": "VARIABLE",
    },
    Object {
      "end": 51,
      "line": 0,
      "start": 50,
      "text": ")",
      "type": "BRACKET",
    },
    Object {
      "end": 55,
      "line": 0,
      "start": 54,
      "text": "5",
      "type": "NUMBER",
    },
  ],
]
`;

exports[`tokenize 1`] = `
Array [
  Object {
    "end": 6,
    "line": 0,
    "start": 0,
    "text": "select",
    "type": "KEYWORD",
  },
  Object {
    "end": 8,
    "line": 0,
    "start": 7,
    "text": "*",
    "type": "OPERATOR",
  },
  Object {
    "end": 13,
    "line": 0,
    "start": 9,
    "text": "from",
    "type": "KEYWORD",
  },
  Object {
    "end": 19,
    "line": 0,
    "start": 14,
    "text": "table",
    "type": "KEYWORD",
  },
  Object {
    "end": 25,
    "line": 0,
    "start": 20,
    "text": "where",
    "type": "KEYWORD",
  },
  Object {
    "end": 27,
    "line": 0,
    "start": 26,
    "text": "a",
    "type": "VARIABLE",
  },
  Object {
    "end": 29,
    "line": 0,
    "start": 28,
    "text": "=",
    "type": "OPERATOR",
  },
  Object {
    "end": 31,
    "line": 0,
    "start": 30,
    "text": "5",
    "type": "NUMBER",
  },
  Object {
    "end": 32,
    "line": 0,
    "start": 31,
    "text": ";",
    "type": "SEMI",
  },
]
`;

exports[`tokenize 2`] = `
Array [
  Object {
    "end": 6,
    "line": 1,
    "start": 0,
    "text": "select",
    "type": "KEYWORD",
  },
  Object {
    "end": 6,
    "line": 2,
    "start": 2,
    "text": "aa.a",
    "type": "VARIABLE",
  },
  Object {
    "end": 7,
    "line": 2,
    "start": 6,
    "text": ",",
    "type": "COMMA",
  },
  Object {
    "end": 6,
    "line": 3,
    "start": 2,
    "text": "aa.b",
    "type": "VARIABLE",
  },
  Object {
    "end": 4,
    "line": 4,
    "start": 0,
    "text": "from",
    "type": "KEYWORD",
  },
  Object {
    "end": 9,
    "line": 5,
    "start": 2,
    "text": "table_a",
    "type": "VARIABLE",
  },
  Object {
    "end": 12,
    "line": 5,
    "start": 10,
    "text": "aa",
    "type": "VARIABLE",
  },
  Object {
    "end": 6,
    "line": 6,
    "start": 2,
    "text": "join",
    "type": "KEYWORD",
  },
  Object {
    "end": 14,
    "line": 6,
    "start": 7,
    "text": "table_b",
    "type": "VARIABLE",
  },
  Object {
    "end": 17,
    "line": 6,
    "start": 15,
    "text": "bb",
    "type": "VARIABLE",
  },
  Object {
    "end": 20,
    "line": 6,
    "start": 18,
    "text": "on",
    "type": "KEYWORD",
  },
  Object {
    "end": 25,
    "line": 6,
    "start": 21,
    "text": "aa.a",
    "type": "VARIABLE",
  },
  Object {
    "end": 27,
    "line": 6,
    "start": 26,
    "text": "=",
    "type": "OPERATOR",
  },
  Object {
    "end": 32,
    "line": 6,
    "start": 28,
    "text": "bb.b",
    "type": "VARIABLE",
  },
  Object {
    "end": 5,
    "line": 7,
    "start": 0,
    "text": "where",
    "type": "KEYWORD",
  },
  Object {
    "end": 6,
    "line": 8,
    "start": 2,
    "text": "aa.b",
    "type": "VARIABLE",
  },
  Object {
    "end": 8,
    "line": 8,
    "start": 7,
    "text": "=",
    "type": "OPERATOR",
  },
  Object {
    "end": 10,
    "line": 8,
    "start": 9,
    "text": "3",
    "type": "NUMBER",
  },
  Object {
    "end": 5,
    "line": 9,
    "start": 0,
    "text": "order",
    "type": "KEYWORD",
  },
  Object {
    "end": 8,
    "line": 9,
    "start": 6,
    "text": "by",
    "type": "KEYWORD",
  },
  Object {
    "end": 6,
    "line": 10,
    "start": 2,
    "text": "bb.b",
    "type": "VARIABLE",
  },
  Object {
    "end": 5,
    "line": 11,
    "start": 0,
    "text": "limit",
    "type": "KEYWORD",
  },
  Object {
    "end": 3,
    "line": 12,
    "start": 2,
    "text": "5",
    "type": "NUMBER",
  },
]
`;
